# console_c

./: .gitignore  02.c  Makefile  README.md  main.c  meson.build
code/commands/: commands.c  commands.h
code/commands_repl_c/: commands_repl.c  commands_repl.h
code/get_commands/: get_commands.c  get_commands.h
code/interface/: interface.c  interface.h
code/repl_code/: repl.c  repl.h
code/tree_decision/: tree_decision.c  tree_decision.h
